# py_boiler

./: .gitignore  README.md  pyproject.toml  pytest.ini  tree.txt
.github/workflows/: SIMPLE-CI-SETUP.md  ci.yml  python-publish.yml
src/py_boiler/: app.py  templates.py
src/py_boiler/basic/: templates.py
src/py_boiler/django/: templates.py
templates/: README_TEMPLATE.md
tests/: conftest.py  test_app.py  test_basic.py  test_init.py  test_integration.py  test_templates.py
