[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py_boiler"
version = "1.0.0"
description = "A fast and flexible scaffolding tool for Python applications."
readme = "README.md"
authors = [{ name = "Delali Funani", email = "dfunani@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["scaffold", "boilerplate", "python", "starter", "generator"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/dfunani/py_boiler"
Repository = "https://github.com/dfunani/py_boiler"
Issues = "https://github.com/dfunani/py_boiler/issues"

